<resources>
    <string name="app_name">ease-music-andriod</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ease_music">Ease Music</string>
    <string name="immersive_music_playing_app">Immersive Music Playing App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_mini_player_text">current playing song xxxxx</string>
    <string name="music_title">music title</string>
    <string name="music_author">music author</string>
    <string name="music_divider">-</string>
    <string name="music_description">music description</string>
    <string name="member_login">Member Login</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? SIGN In</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_favorites">My Favorites</string>
    <string name="_0">0</string>
    <string name="user_email">user email</string>
    <string name="downloads">Downloads</string>
    <string name="sign_out">Sign Out</string>
    <string name="search">Search</string>
    <string name="music">Music</string>
    <string name="home">Home</string>
</resources>