<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="#F3D6E6F4"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/music_thumbnail"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toStartOf="@+id/music_text_layout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/music_text_layout"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/toggle_browser"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/music_thumbnail">

            <TextView
                android:id="@+id/music_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alike_angular"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:text="@string/music_title"
                android:textSize="15sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/music_author"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/alike_angular"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/music_author"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/music_divider"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/music_author"
                    android:fontFamily="@font/alike_angular"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/music_divider"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/music_description"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toEndOf="@id/music_divider"
                    android:fontFamily="@font/alike_angular"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/music_description"
                    android:textSize="11sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/toggle_browser"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:src="@drawable/open_in_browser_icon_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/music_text_layout"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>